--- a/test/dummy/app/components/dummy/ui/topics_component.sass
+++ b/test/dummy/app/components/dummy/ui/topics_component.sass
@@ -16,7 +16,6 @@
   &__a
     +font-size-text-xs
     font-weight: $font-weight-medium
-    background-color: $shade-light-contrast
     border: 1px solid $transparent-b200
     border-radius: $border-radius-pill
     justify-content: center
